# cwinpy

./: .coveragerc  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  .travis_old.yml  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  dev-requirements.txt  docs-environment.yml  docs-requirements.txt  environment.yml  hierarchical-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  versioneer.py
.github/: python-package.yml
.github/workflows/: build.yml  draft-pdf.yml  python-package.yml
comparisons/: single_detector_noise_only.py
containers/: cwinpy-test-python36  cwinpy-test-python37  cwinpy-test-python38  cwinpy-test-python39
cwinpy/: __init__.py  _version.py  cutils.pyx  cwinpyargparser.py  data.py  heterodyne.py  hierarchical.py  info.py  likelihood.py  parfile.py  peutils.py  plot.py  signal.py  utils.py
cwinpy/condor/: __init__.py  hetnodes.py  penodes.py
cwinpy/data/O1/hw_inj/: PULSAR00.par  PULSAR01.par  PULSAR02.par  PULSAR04.par  PULSAR07.par  PULSAR08.par  PULSAR10.par  PULSAR14.par
cwinpy/data/O3/hw_inj/: PULSAR00.par  PULSAR01.par  PULSAR02.par  PULSAR03.par  PULSAR04.par  PULSAR05.par  PULSAR07.par  PULSAR08.par  PULSAR09.par  PULSAR11.par  PULSAR12.par  PULSAR13.par  PULSAR17.par
cwinpy/data/S5/hw_inj/: PULSAR03.par  PULSAR05.par  PULSAR08.par
cwinpy/data/S6/hw_inj/: PULSAR00.par  PULSAR02.par  (+3 more)
cwinpy/heterodyne/: __init__.py  base.py  fastfunctions.pyx  fastheterodyne.pyx  filter_core.c  filter_core.h  heterodyne.py  nodes.py
cwinpy/io/: data.py
cwinpy/iostream/: __init__.py  ascii.py  hdf5.py  readers.py
cwinpy/knope/: __init__.py  knope.py  simulation.py  skyshift.py  testing.py
cwinpy/pe/: __init__.py  likelihood.py  pe.py  peutils.py  roq.py  simulation.py  summary.py  testing.py  webpage.py
cwinpy/test/: conftest.py  create_hierarchical_test_set.py  test_data.py  test_heterodyne.py  test_hierarchical.py  test_info.py  test_knope.py  test_likelihood.py  test_pe.py  test_pe_simulation.py  test_pe_testing.py  test_peutils.py  test_plot.py  test_roq.py  test_signal.py  test_utils.py
cwinpy/test/data/: hierarchical_test_set_0.par  hierarchical_test_set_1.par  inj_test.txt_H1_1.0_signal_only  inj_test.txt_H1_2.0_signal_only  inj_test.txt_L1_1.0_signal_only  plotting_test.par
docs/: Makefile  api.rst  cli.txt  conf.py  data.rst  data.txt  hierarchical.rst  hierarchical.txt  index.rst  index.txt  information.rst  information.txt  installation.md  installation.rst  installation.txt  knope.txt  likelihood.rst  likelihood.txt  parfile.rst  pipelines.rst  plotting.rst  requirements.txt  signal.rst  simulation.rst  simulation.txt  skyshifting.rst  utils.rst  utils.txt
docs/comparisons/: comparisons.rst  comparisons.txt  multi-detector-O1-data-hardware-injection.txt  multi-detector-O1-data.txt  multi-detector-noise-only.txt  multi-detector-software-injection-circular.txt  multi-detector-software-injection-linear.txt  single-detector-O1-data-hardware-injection.txt  single-detector-O1-data-restricted-prior.txt  single-detector-O1-data.txt  single-detector-noise-only-two-harmonics.txt  single-detector-noise-only.txt  single-detector-software-injection-circular.txt  single-detector-software-injection-linear.txt  single-detector-software-injection-two-harmonics.txt
docs/comparisons/knope/: lalapps_knope_O1injections.ini  lalpulsar_knope_O1injections.ini
docs/comparisons/scripts/: comparitors.py  multi_detector_O1_data.py  multi_detector_O1_data_hardware_injection.py  multi_detector_noise_only.py  multi_detector_software_injection_circular.py  multi_detector_software_injection_linear.py  pptest_one_harmonic.py  pptest_two_harmonics.py  single_detector_O1_data.py  single_detector_O1_data_hardware_injection.py  single_detector_O1_data_restricted_prior.py  single_detector_noise_only.py  single_detector_noise_only_boundaries.py  single_detector_noise_only_two_harmonics.py  single_detector_software_injection_circular.py  single_detector_software_injection_linear.py  single_detector_software_injection_two_harmonics.py
docs/heterodyne/: cwinpy_heterodyne_dag.ini  cwinpy_heterodyne_pipeline.ini  heterodyne.rst
docs/heterodyne/examples/: .gitignore  J0123+0123.par  J0404-0404.par  example1_config.ini  example2_config.ini  example3_stage1_config.ini  example3_stage2_config.ini  example_mfd_1.py
docs/knope/: cwinpy_knope_dag.ini  cwinpy_knope_pipeline.ini  knope.rst  knope.txt
docs/knope/data/: PULSAR08.par  example1_config.ini  example1_prior.txt
docs/knope/examples/: cwinpy_pe_example_O2_nongr.ini  knope_example_O1_ligo.ini  knope_example_O2_open.ini  knope_example_O2_vela_transient.ini  knope_example_O3_dual.ini
docs/pe/: .gitignore  cwinpy_pe_dag.ini  cwinpy_pe_pipeline.ini  pe.rst  pe.txt
docs/pe/data/: PULSAR01_offset.par  PULSAR01_prior.txt  PULSAR05_offset.par  PULSAR05_prior.txt  PULSAR08_updated.par  ROQ_J1932+17_prior.txt  TRANSIENT.par  example1_config.ini  example2_config.ini  example2_prior.txt  example3_config.ini  example3_prior.txt  roq_example_prior_update.prior  roq_pipeline_example.ini
docs/pe/roq/: example1.py  example1_roq.py  roq.rst
docs/skyshifting/: J1932+17.par  exampleconfig.ini  prior.txt
examples/: example_targeted_pulsar.py  example_targeted_pulsar_knope.py  example_targeted_pulsar_pe.py
examples/hierarchical/: .gitignore  example_hierarchical_model.py  example_histogram_model.py
logo/: CWInPy_logo.ipynb
paper/: .gitignore  Makefile  paper.bib  paper.md
test/: conftest.py  create_hierarchical_test_set.py  test_data.py  test_heterodyne.py  test_hierarchical.py  test_knope.py  test_knope_testing.py  test_likelihood.py  test_pe.py  test_pe_simulation.py  test_pe_testing.py  test_plot.py  test_signal.py  test_utils.py
test/data/: hierarchical_test_set_0_result.json  hierarchical_test_set_1_result.json  inj_test.txt_H1_1.0_signal_only  inj_test.txt_H1_2.0_signal_only  inj_test.txt_L1_1.0_signal_only  inj_test.txt_L1_2.0_signal_only  plotting_test_lppen.hdf
(+78 files in other folders)
