[metadata]
name = cwinpy
author = Matthew Pitkin
author_email = matthew.pitkin@ligo.org
description = A Python module for Bayesian inferences with continuous gravitational-wave sources
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.ligo.org/CW/software/cwinpy
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >=3.6, <4
setup_requires =
    cython
    numpy
    setuptools >= 38.2.5
    setuptools-scm
    wheel
install_requires =
    astropy
    bilby >= 1.1.0
    bilby_pipe >= 1.0.2
    gwosc >= 0.5.4
    gwpy >= 2.0.0
    lalsuite >= 6.82
    lintegrate >= 0.1.7
    matplotlib
    numba
    numpy
    psrqpy
    pycondor
    scipy
include_package_data = True
packages = find:

[options.package_data]
cwinpy =
    data/S5/hw_inj/*.par
    data/S6/hw_inj/*.par
    data/O1/hw_inj/*.par
    data/O2/hw_inj/*.par
    data/O3/hw_inj/*.par

[options.extras_require]
test =
    codecov
    coverage
    coverage-badge
    pytest >= 4.6
    pytest_socket
    pytest-coverage
    pytest-runner
docs =
    autodoc
    nbsphinx
    numpydoc
    pydata-sphinx-theme
    recommonmark
    sphinx >= 2.0
    sphinx-panels
    sphinxcontrib-images >= 0.9.1
    sphinxcontrib-napoleon
dev =
    black
    codespell >= 1.3.0
    isort >= 4.3.21
    flake8
    pre-commit
    seed-isort-config

[options.entry_points]
console_scripts =
    cwinpy_knope = cwinpy.knope.knope:knope_cli
    cwinpy_heterodyne = cwinpy.heterodyne.heterodyne:heterodyne_cli
    cwinpy_heterodyne_dag = cwinpy.heterodyne.heterodyne:heterodyne_dag_cli
    cwinpy_heterodyne_merge = cwinpy.heterodyne.heterodyne:heterodyne_merge_cli
    cwinpy_pe = cwinpy.pe.pe:pe_cli
    cwinpy_pe_dag = cwinpy.pe.pe:pe_dag_cli
    cwinpy_pe_generate_pp_plots = cwinpy.pe.testing:generate_pp_plots

[bdist_wheel]
universal = 1

[flake8]
exclude = __pycache__,.git,docs,build,dist,test,*__init__.py,docs/comparisons/scripts/comparitors.py,cwinpy/_version.py
max-line-length = 120
ignore =
    E129
    W503
    W504
    W605
    E203

[tool:isort]
line_length=88
multi_line_output=3
skip_glob=setup.py,*/__init__.py

[coverage:run]
omit = cwinpy/_version.py
